[gd_scene load_steps=3 format=3 uid="uid://bd4vahyf4bm52"]

[ext_resource type="Script" path="res://scenes/hud/equipment.gd" id="1_5esmc"]
[ext_resource type="PackedScene" uid="uid://cscgcd10ibwak" path="res://scenes/inventory/slot.tscn" id="1_nh0e8"]

[node name="Equipment" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5esmc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 158.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="WeaponContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WeaponA" parent="MarginContainer/WeaponContainer" instance=ExtResource("1_nh0e8")]
layout_mode = 2
type_restriction = 2

[node name="WeaponB" parent="MarginContainer/WeaponContainer" instance=ExtResource("1_nh0e8")]
layout_mode = 2
type_restriction = 2
